Added media queries

--- a/index.html
+++ b/index.html
@@ -19,200 +19,266 @@
         <nav>
           <h5>Logo</h5>
           <button><i class="fa-solid fa-bars hamburger"></i></button>
+          <ul class="new-links">
+            <li><a href=""></a>About</li>
+            <li><a href=""></a>Work</li>
+            <li><a href=""></a>Contact</li>
+          </ul>
         </nav>
       </section>
       <section class="second-section">
-        <h4>Branding | Image making</h4>
-        <h1>Visual Designer</h1>
-        <p>
-          This is template Figma file, turned into code using Anima. Learn more
-          at AnimaApp.com
-        </p>
-        <button>Contact</button>
-        <div class="header-image">
-          <img src="images/HeaderImage 1.png" alt="" />
+        <div class="text-part">
+          <h4>Branding | Image making</h4>
+          <h1>Visual Designer</h1>
+          <p>
+            This is template Figma file, turned into code using Anima. <br />
+            Learn more at AnimaApp.com
+          </p>
+          <button>Contact</button>
+        </div>
+        <div class="header-image-con">
+          <img src="images/HeaderImage 1.png" class="header-img" alt="" />
         </div>
       </section>
     </header>
     <main>
       <section class="section-1">
-        <img src="images/google img.png" class="main-logo-img-sizing" alt="" />
-        <img src="images/nike img.png" class="main-logo-img-sizing" alt="" />
-        <img src="images/samsung img.png" class="main-logo-img-sizing" alt="" />
-        <img src="images/apple img.png" class="main-logo-img-sizing" alt="" />
-        <img src="images/adidas img.png" class="main-logo-img-sizing" alt="" />
+        <div>
+          <img
+            src="images/google img.png"
+            class="main-logo-img-sizing"
+            alt=""
+          />
+        </div>
+        <div>
+          <img src="images/nike img.png" class="main-logo-img-sizing" alt="" />
+        </div>
+        <div>
+          <img
+            src="images/samsung img.png"
+            class="main-logo-img-sizing"
+            alt=""
+          />
+        </div>
+        <div>
+          <img
+            src="images/apple img.png"
+            class="main-logo-img-sizing testing"
+            alt=""
+          />
+        </div>
+        <div>
+          <img
+            src="images/adidas img.png"
+            class="main-logo-img-sizing"
+            alt=""
+          />
+        </div>
       </section>
       <section class="section-2">
         <div class="skills">
-          <div class="section-2-images">
-            <img src="images/PD img.png" alt="" />
-          </div>
           <div>
-            <h5 class="skills-title">Product Design</h5>
-          </div>
-          <div>
-            <p class="subtitle">
-              This is a template Figma file,turned into code using Anima.Learn
-              more at AnimaApp.com
-            </p>
+            <div class="section-2-images">
+              <img src="images/PD img.png" alt="" />
+            </div>
+            <div>
+              <h5 class="skills-title">Product Design</h5>
+            </div>
+            <div>
+              <p class="subtitle">
+                This is a template Figma file,turned into code using Anima.Learn
+                more at AnimaApp.com
+              </p>
+            </div>
           </div>
 
-          <div class="section-2-images">
-            <img src="images/VD img.png" alt="" />
-          </div>
           <div>
-            <h5 class="skills-title">Visual Design</h5>
-          </div>
-          <div>
-            <p class="subtitle">
-              This is a template Figma file,turned into code using Anima.Learn
-              more at AnimaApp.com
-            </p>
+            <div class="section-2-images">
+              <img src="images/VD img.png" alt="" />
+            </div>
+            <div>
+              <h5 class="skills-title">Visual Design</h5>
+            </div>
+            <div>
+              <p class="subtitle">
+                This is a template Figma file,turned into code using Anima.Learn
+                more at AnimaApp.com
+              </p>
+            </div>
           </div>
 
-          <div class="section-2-images">
-            <img src="images/AD img.png" alt="" />
-          </div>
           <div>
-            <h5 class="skills-title">Art Direction</h5>
-          </div>
-          <div>
-            <p class="subtitle">
-              This is a template Figma file,turned into code using Anima.Learn
-              more at AnimaApp.com
-            </p>
+            <div class="section-2-images">
+              <img src="images/AD img.png" alt="" />
+            </div>
+            <div>
+              <h5 class="skills-title">Art Direction</h5>
+            </div>
+            <div>
+              <p class="subtitle">
+                This is a template Figma file,turned into code using Anima.Learn
+                more at AnimaApp.com
+              </p>
+            </div>
           </div>
         </div>
       </section>
       <section class="section-3">
-        <h2>Latest Work</h2>
-        <img src="images/PT img 1.png" class="latest-works-img" alt="" />
-        <div class="title">
-          <h5 class="latest-work-title">Project Title</h5>
-          <p>UI, Art direction</p>
-        </div>
+        <h2>Latest Works</h2>
+        <div class="latest-works">
+          <div class="card-con">
+            <img src="images/PT img 1.png" class="latest-works-img" alt="" />
 
-        <img src="images/PT img 2.png" class="latest-works-img" alt="" />
-        <div class="title">
-          <h5 class="latest-work-title">Project Title</h5>
-          <p>UI, Art direction</p>
-        </div>
+            <div class="title">
+              <h5 class="latest-work-title">Project Title</h5>
+              <p>UI, Art direction</p>
+            </div>
+          </div>
 
-        <img src="images/PT img 3.png" class="latest-works-img" alt="" />
-        <div class="title">
-          <h5 class="latest-work-title">Project Title</h5>
-          <p>UI, Art direction</p>
-        </div>
+          <div class="card-con">
+            <img src="images/PT img 2.png" class="latest-works-img" alt="" />
+            <div class="title">
+              <h5 class="latest-work-title">Project Title</h5>
+              <p>UI, Art direction</p>
+            </div>
+          </div>
 
-        <img src="images/PT img 4.png" class="latest-works-img" alt="" />
-        <div class="title">
-          <h5 class="latest-work-title">Project Title</h5>
-          <p>UI, Art direction</p>
-        </div>
+          <div class="card-con">
+            <img src="images/PT img 3.png" class="latest-works-img" alt="" />
+            <div class="title">
+              <h5 class="latest-work-title">Project Title</h5>
+              <p>UI, Art direction</p>
+            </div>
+          </div>
 
-        <img src="images/PT img 5.png" class="latest-works-img" alt="" />
-        <div class="title">
-          <h5 class="latest-work-title">Project Title</h5>
-          <p>UI, Art direction</p>
-        </div>
+          <div class="card-con">
+            <img src="images/PT img 4.png" class="latest-works-img" alt="" />
+            <div class="title">
+              <h5 class="latest-work-title">Project Title</h5>
+              <p>UI, Art direction</p>
+            </div>
+          </div>
 
-        <img src="images/PT img 6.png" class="latest-works-img" alt="" />
-        <div class="title">
-          <h5 class="latest-work-title">Project Title</h5>
-          <p>UI, Art direction</p>
+          <div class="card-con">
+            <img src="images/PT img 5.png" class="latest-works-img" alt="" />
+            <div class="title">
+              <h5 class="latest-work-title">Project Title</h5>
+              <p>UI, Art direction</p>
+            </div>
+          </div>
+          <div class="card-con">
+            <img src="images/PT img 6.png" class="latest-works-img" alt="" />
+            <div class="title">
+              <h5 class="latest-work-title">Project Title</h5>
+              <p>UI, Art direction</p>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section-4">
-        <div class="client-testimonial">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
-            eveniet reiciendis temporibus.
-          </p>
-          <img src="images/Client Img.png" class="client-img" alt="" />
-          <img src="images/Stars img.png" class="stars" alt="" />
-          <h6>Emma Nolen</h6>
-          <br />
-          <p class="mute">Google</p>
-        </div>
+        <div class="client-testimonials">
+          <div class="client-testimonial">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              eveniet reiciendis temporibus.
+            </p>
+            <img src="images/Client Img.png" class="client-img" alt="" />
+            <img src="images/Stars img.png" class="stars" alt="" />
+            <h6>Emma Nolen</h6>
+            <br />
+            <p class="mute">Google</p>
+          </div>
 
-        <div class="client-testimonial">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
-            eveniet reiciendis temporibus.
-          </p>
-          <img src="images/Client Img.png" class="client-img" alt="" />
-          <img src="images/Stars img.png" class="stars" alt="" />
-          <h6>Emma Nolen</h6>
-          <br />
-          <p class="mute">Google</p>
-        </div>
+          <div class="client-testimonial">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              eveniet reiciendis temporibus.
+            </p>
+            <img src="images/Client Img.png" class="client-img" alt="" />
+            <img src="images/Stars img.png" class="stars" alt="" />
+            <h6>Emma Nolen</h6>
+            <br />
+            <p class="mute">Google</p>
+          </div>
 
-        <div class="client-testimonial">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
-            eveniet reiciendis temporibus.
-          </p>
-          <img src="images/Client Img.png" class="client-img" alt="" />
-          <img src="images/Stars img.png" class="stars" alt="" />
-          <h6>Emma Nolen</h6>
-          <br />
-          <p class="mute">Google</p>
-        </div>
+          <div class="client-testimonial">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              eveniet reiciendis temporibus.
+            </p>
+            <img src="images/Client Img.png" class="client-img" alt="" />
+            <img src="images/Stars img.png" class="stars" alt="" />
+            <h6>Emma Nolen</h6>
+            <br />
+            <p class="mute">Google</p>
+          </div>
 
-        <div class="client-testimonial">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
-            eveniet reiciendis temporibus.
-          </p>
-          <img src="images/Client Img.png" class="client-img" alt="" />
-          <img src="images/Stars img.png" class="stars" alt="" />
-          <h6>Emma Nolen</h6>
-          <br />
-          <p class="mute">Google</p>
-        </div>
+          <div class="client-testimonial">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              eveniet reiciendis temporibus.
+            </p>
+            <img src="images/Client Img.png" class="client-img" alt="" />
+            <img src="images/Stars img.png" class="stars" alt="" />
+            <h6>Emma Nolen</h6>
+            <br />
+            <p class="mute">Google</p>
+          </div>
 
-        <div class="client-testimonial">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
-            eveniet reiciendis temporibus.
-          </p>
-          <img src="images/Client Img.png" class="client-img" alt="" />
-          <img src="images/Stars img.png" class="stars" alt="" />
-          <h6>Emma Nolen</h6>
-          <br />
-          <p class="mute">Google</p>
-        </div>
+          <div class="client-testimonial">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              eveniet reiciendis temporibus.
+            </p>
+            <img src="images/Client Img.png" class="client-img" alt="" />
+            <img src="images/Stars img.png" class="stars" alt="" />
+            <h6>Emma Nolen</h6>
+            <br />
+            <p class="mute">Google</p>
+          </div>
 
-        <div class="client-testimonial">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
-            eveniet reiciendis temporibus.
-          </p>
-          <img src="images/Client Img.png" class="client-img" alt="" />
-          <img src="images/Stars img.png" class="stars" alt="" />
-          <h6>Emma Nolen</h6>
-          <br />
-          <p class="mute">Google</p>
+          <div class="client-testimonial">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+              eveniet reiciendis temporibus.
+            </p>
+            <img src="images/Client Img.png" class="client-img" alt="" />
+            <img src="images/Stars img.png" class="stars" alt="" />
+            <h6>Emma Nolen</h6>
+            <br />
+            <p class="mute">Google</p>
+          </div>
         </div>
       </section>
     </main>
     <footer>
-      <h2>Let's work together</h2>
-      <p>
-        This is a template Figma file, turned into code using Anima . Learn more
-        AnimaApp.com
-      </p>
-      <div class="socials">
-        <i class="fa-brands fa-discord"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-dribbble"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-behance"></i><br /><br />
+      <div class="closing-title">
+        <h2>Let's work together</h2>
+        <p>
+          This is a template Figma file, turned into code using Anima . Learn
+          more AnimaApp.com
+        </p>
+        <div class="socials">
+          <i class="fa-brands fa-discord"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-dribbble"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-behance"></i><br /><br />
+        </div>
       </div>
+
       <div class="footer-input-section">
-        <input type="text" placeholder="Name"  class="footer-input"/><br /><br />
-        <input type="email" placeholder="Email" class="footer-input" /><br /><br>
-        <button>Submit</button><br><br>
+        <input
+          type="text"
+          placeholder="Name"
+          class="footer-input"
+        /><br /><br />
+        <input
+          type="email"
+          placeholder="Email"
+          class="footer-input"
+        /><br /><br />
+        <button>Submit</button><br /><br />
       </div>
     </footer>
   </body>
